analysis/spring-framework/step_1/logs/4596-a1f5fb5.log
:buildSrc:compileJava UP-TO-DATE
:buildSrc:compileGroovy
:buildSrc:processResources
:buildSrc:classes
:buildSrc:jar
:buildSrc:assemble
:buildSrc:compileTestJava UP-TO-DATE
:buildSrc:compileTestGroovy UP-TO-DATE
:buildSrc:processTestResources UP-TO-DATE
:buildSrc:testClasses UP-TO-DATE
:buildSrc:test UP-TO-DATE
:buildSrc:check UP-TO-DATE
:buildSrc:build
:assemble
:build
:spring-core:cglibRepackJar
:spring-core:objenesisRepackJar
:spring-core:compileJava
:spring-core:processResources UP-TO-DATE
:spring-core:classes
:spring-core:jar
:spring-beans:compileJava
:spring-beans:processResources
:spring-beans:classes
:spring-beans-groovy:compileJava SKIPPED
:spring-beans-groovy:compileGroovy
:spring-beans-groovy:processResources UP-TO-DATE
:spring-beans-groovy:classes
:spring-beans:jar
:spring-aop:compileJava
:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-expression:compileJava
:spring-expression:processResources
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileJava
:spring-instrument:processResources UP-TO-DATE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileJava
:spring-context:compileGroovy UP-TO-DATE
:spring-context:processResources
:spring-context:classes
:spring-context:jar
:spring-tx:compileJava/home/ubuntu/bugs/spring-framework/spring-tx/src/main/java/org/springframework/transaction/interceptor/TransactionAspectSupport.java:61: error: unmappable character for encoding ASCII
 * @author St??phane Nicoll
             ^
/home/ubuntu/bugs/spring-framework/spring-tx/src/main/java/org/springframework/transaction/interceptor/TransactionAspectSupport.java:61: error: unmappable character for encoding ASCII
 * @author St??phane Nicoll
              ^

:spring-tx:processResources
:spring-tx:classes
:spring-tx:jar
:spring-jdbc:compileJava
:spring-jdbc:processResources
:spring-jdbc:classes
:spring-jdbc:jar
:spring-context-support:compileJava
:spring-context-support:processResources
:spring-context-support:classes
:spring-context-support:jar
:spring-oxm:compileJava
:spring-oxm:processResources
:spring-oxm:classes
:spring-oxm:jar
:spring-web:compileJava/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/web/filter/ForwardedHeaderFilter.java:50: error: unmappable character for encoding ASCII
 * @author Edd?? Mel??ndez
              ^
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/web/filter/ForwardedHeaderFilter.java:50: error: unmappable character for encoding ASCII
 * @author Edd?? Mel??ndez
               ^
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/web/filter/ForwardedHeaderFilter.java:50: error: unmappable character for encoding ASCII
 * @author Edd?? Mel??ndez
                    ^
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/web/filter/ForwardedHeaderFilter.java:50: error: unmappable character for encoding ASCII
 * @author Edd?? Mel??ndez
                     ^

:spring-web:compileGroovy UP-TO-DATE
:spring-web:processResources
:spring-web:classes
:spring-web:jar
:spring-orm:compileJava
:spring-orm:processResources UP-TO-DATE
:spring-orm:classes
:spring-orm:jar
:spring-aspects:compileJava
:spring-aspects:processResources
:spring-aspects:classes
:spring-aspects:jar
:spring-aspects:sourcesJar
:spring-aspects:assemble
:spring-aspects:build
:spring-beans:sourcesJar
:spring-beans:assemble
:spring-beans:build
:spring-beans-groovy:jar SKIPPED
:spring-beans-groovy:sourcesJar SKIPPED
:spring-beans-groovy:assemble
:spring-beans-groovy:build
:spring-build-src:assemble UP-TO-DATE
:spring-build-src:build
:spring-context:sourcesJar
:spring-context:assemble
:spring-context:build
:spring-context-support:sourcesJar
:spring-context-support:assemble
:spring-context-support:build
:spring-core:sourcesJar
:spring-core:assemble
:spring-core:build
:spring-expression:sourcesJar
:spring-expression:assemble
:spring-expression:build
:spring-framework-bom:assemble UP-TO-DATE
:spring-framework-bom:build
:spring-instrument:sourcesJar
:spring-instrument:assemble
:spring-instrument:build
:spring-jdbc:sourcesJar
:spring-jdbc:assemble
:spring-jdbc:build
:spring-messaging:compileJava
:spring-messaging:processResources UP-TO-DATE
:spring-messaging:classes
:spring-messaging:jar
:spring-jms:compileJava
:spring-jms:processResources
:spring-jms:classes
:spring-jms:jar
:spring-jms:sourcesJar
:spring-jms:assemble
:spring-jms:build
:spring-messaging:sourcesJar
:spring-messaging:assemble
:spring-messaging:build
:spring-orm:sourcesJar
:spring-orm:assemble
:spring-orm:build
:spring-oxm:sourcesJar
:spring-oxm:assemble
:spring-oxm:build
:spring-webmvc:compileJava
:spring-webmvc:processResources
:spring-webmvc:classes
:spring-webmvc:jar
:spring-websocket:compileJava
:spring-websocket:processResources
:spring-websocket:classes
:spring-websocket:jar
:spring-test:compileJava/home/ubuntu/bugs/spring-framework/spring-test/src/main/java/org/springframework/test/context/junit/jupiter/SpringExtension.java:28: error: cannot find symbol
import org.junit.jupiter.api.extension.ContainerExtensionContext;
                                      ^
  symbol:   class ContainerExtensionContext
  location: package org.junit.jupiter.api.extension
/home/ubuntu/bugs/spring-framework/spring-test/src/main/java/org/springframework/test/context/junit/jupiter/SpringExtension.java:34: error: cannot find symbol
import org.junit.jupiter.api.extension.TestExtensionContext;
                                      ^
  symbol:   class TestExtensionContext
  location: package org.junit.jupiter.api.extension
/home/ubuntu/bugs/spring-framework/spring-test/src/main/java/org/springframework/test/context/junit/jupiter/SpringExtension.java:69: error: cannot find symbol
	public void beforeAll(ContainerExtensionContext context) throws Exception {
	                      ^
  symbol:   class ContainerExtensionContext
  location: class SpringExtension
/home/ubuntu/bugs/spring-framework/spring-test/src/main/java/org/springframework/test/context/junit/jupiter/SpringExtension.java:77: error: cannot find symbol
	public void afterAll(ContainerExtensionContext context) throws Exception {
	                     ^
  symbol:   class ContainerExtensionContext
  location: class SpringExtension
/home/ubuntu/bugs/spring-framework/spring-test/src/main/java/org/springframework/test/context/junit/jupiter/SpringExtension.java:98: error: cannot find symbol
	public void beforeEach(TestExtensionContext context) throws Exception {
	                       ^
  symbol:   class TestExtensionContext
  location: class SpringExtension
/home/ubuntu/bugs/spring-framework/spring-test/src/main/java/org/springframework/test/context/junit/jupiter/SpringExtension.java:108: error: cannot find symbol
	public void afterEach(TestExtensionContext context) throws Exception {
	                      ^
  symbol:   class TestExtensionContext
  location: class SpringExtension
/home/ubuntu/bugs/spring-framework/spring-test/src/main/java/org/springframework/test/context/junit/jupiter/SpringExtension.java:56: error: SpringExtension is not abstract and does not override abstract method resolveParameter(ParameterContext,ExtensionContext) in ParameterResolver
public class SpringExtension implements BeforeAllCallback, AfterAllCallback, TestInstancePostProcessor,
       ^
/home/ubuntu/bugs/spring-framework/spring-test/src/main/java/org/springframework/test/context/junit/jupiter/SpringExtension.java:130: error: method does not override or implement a method from a supertype
	@Override
	^
/home/ubuntu/bugs/spring-framework/spring-test/src/main/java/org/springframework/test/context/junit/jupiter/SpringExtension.java:146: error: method does not override or implement a method from a supertype
	@Override
	^
9 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-test:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 49.101 secs
